tests/expr/range_right_bound_float/stderr.golden
error: right bound of range must be of type integer, current type float
bus.fbd +2:23
   |
 2 |   c config; range = 0:3.14
   |                       ^^^^
